* 2007-10-17 - martin.kauss@open-xchange.com

 - Fixed bug #9808. An update task failed because of a wrong where
   clause. This has been fixed.

* 2007-10-16 - sebastian.kauss@open-xchange.com

 - Bugfix #9219: Reminder popups: Appointment reminder has wrong text
 - Bugfix #9416: Calendar: Concurrency issue with Reminder
                 confirmations - Bad error message
 - Bugfix #9492: Calendar: Reminder appears again and again
 - Bugfix #9514: Calendar: Reminder for recurring appointments shown
                 more than once for each occurence

* 2007-10-15 - martin.kauss@open-xchange.com

 - Fixed bug #6335. Some characters caused problems while building XML.
   Now we are throwing an error in the calendar if those characters are
   found.

* 2007-10-11 - thorben.betten@open-xchange.com

 - Bugfix #9756: Fallback implementation if UID EXPUNGE is not supported by
   IMAP server
 - Bugfix #9787: Checking right table when looking for user's default
   infostore folder on context deletion

* 2007-10-11 - martin.kauss@open-xchange.com

 - Fixed bug #7471. If an existing exception is deleted with the
   update method and the field delete_exception then this exeption
   was just marked as deleted exception without a real delete.
   This has been fixed.
   
  - Removed unused imports

  - Fixed bug #9599. By adding a new users the confirm message was
    deleted for existing users. This has been fixed.

* 2007-10-10 - thorben.betten@open-xchange.com

 - Bugfix #9751: Fixed non-appearing shared mail folders
 - Bugfix #9750: Avoid annoying error logging whenever an ACL entity cannot
   be mapped to system user
 - Bugfix #9719: Returning proper instance of FolderObjectIterator
 - Bugfix #9733: More informative error message if no folder admin specified

* 2007-09-17 - thorben.betten@open-xchange.com

 - Bugfix #9664: Fixed check for IMAP server's user flag support
 - Bugfix #9699: Fixed update of IMAP folder's ACLs

* 2007-09-17 - martin.kauss@open-xchange.com
